--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body class="dark">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav dark">
     <div class="w-container">
-      <nav role="navigation" class="w-nav-menu"><a href="/" class="w-nav-link dark">About</a><a href="#" class="w-nav-link dark">PressKit</a><a href="#" class="w-nav-link dark">Contact</a></nav>
+      <nav role="navigation" class="w-nav-menu"><a href="#" class="w-nav-link dark">About</a><a href="#" class="w-nav-link dark">PressKit</a><a href="#" class="w-nav-link dark">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -43,7 +43,7 @@
         <script type="application/json" class="w-json">
           { "items": [] }
         </script>
-      </a><a href="TiltShift_Demo.zip" download class="w-button submit demo">Download PC&nbsp;Demo</a>
+      </a><a href="TiltShift_Demo.zip" download class="w-button submit demo">Download<br> PC Demo</a>
       <h1 class="lead">TiltShift is a logic-cube game that challenges your puzzle solving ability with a number of quirky blocks.&nbsp;</h1></div>
     <div class="w-row">
       <div class="w-col w-col-6">
