--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Play TiltShift the Logic-Cube Game</title>
+  <title>TiltShift - Play the Logic-Cube Puzzle Game</title>
   <meta name="description" content="TiltShift is a logic-cube game that challenges your puzzle solving ability with a number of quirky blocks. Tron-inspired and bright with beautiful lighting, you will utilize a unique spatial manipulation mechanic to make upside-down blocks behave as if they were right-side up. Learn to see the 3D puzzle through multiple perspectives as you tilt and shift obstacles to solve seemingly impossible puzzles.">
   <meta property="og:description" content="Explore a logic-cube that challenges your puzzle solving ability. TiltShift is Tron-inspired and bright with beautiful lighting. You will utilize a unique spatial manipulation mechanic to make upside-down blocks behave as if they were right-side up. Learn to see the 3D puzzle through multiple perspectives as you tilt and shift obstacles to solve seemingly impossible puzzles.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -198,6 +198,16 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
   <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41085222-2', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 </body>
 
 </html>
