Demo download event tracking

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <script type="application/json" class="w-json">
           { "items": [] }
         </script>
-      </a><a href="TiltShift_Demo.zip" download class="w-button submit demo">Download<br> PC Demo</a>
+      </a><a href="TiltShift_Demo.zip" onClick="ga('send', 'event', { eventCategory: 'Demo', eventAction: 'download'});" download class="w-button submit demo">Download<br> PC Demo</a>
       <h1 class="lead">TiltShift is a logic-cube game that challenges your puzzle solving ability with a number of quirky blocks.&nbsp;</h1></div>
     <div class="w-row">
       <div class="w-col w-col-6">
