--- a/presskit/tiltShift/index.html
+++ b/presskit/tiltShift/index.html
@@ -4,9 +4,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Red House Games</title>
-		<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
+		<title>PressKit - TiltShift</title>
+		<meta name="description" content="TiltShift is a logic-cube game that challenges your puzzle solving ability with a number of quirky blocks. Tron-inspired and bright with beautiful lighting, you will utilize a unique spatial manipulation mechanic to make upside-down blocks behave as if they were right-side up. Learn to see the 3D puzzle through multiple perspectives as you tilt and shift obstacles to solve seemingly impossible puzzles.">
+	  <meta property="og:description" content="Explore a logic-cube that challenges your puzzle solving ability. TiltShift is Tron-inspired and bright with beautiful lighting. You will utilize a unique spatial manipulation mechanic to make upside-down blocks behave as if they were right-side up. Learn to see the 3D puzzle through multiple perspectives as you tilt and shift obstacles to solve seemingly impossible puzzles.">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
 		<link href="../style.css" rel="stylesheet" type="text/css">
+		<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.png">
+		<link rel="apple-touch-icon" href="../../images/WebApp.png">
 	</head>
 
 	<body>
@@ -80,20 +84,20 @@
 
 					<div class="uk-grid">
 						<div class="uk-width-medium-1-2">
-							<h2 id="credits">TiltShift Credits</h2><p><strong>Michael Weber</strong><br/>Design & Development</p><p><strong>Ishtyaq Habib</strong><br/><a href="http://codepen.io/tyaq">Web Development</a></p><p><strong>Jeremy Golden</strong><br/>Additional Writing</p><p><strong>DST</strong><br/><a href="http://dreade.com/nosoap">Music</a></p>						</div>
+							<h2 id="credits">TiltShift Credits</h2><p><strong>Michael Weber</strong><br/>Design & Development</p><p><strong>Ishtyaq Habib</strong><br/><a href="https://codepen.io/tyaq">Web Development</a></p><p><strong>Jeremy Golden</strong><br/>Additional Writing</p><p><strong>DST</strong><br/><a href="http://dreade.com/nosoap">Music</a></p>						</div>
 						<div class="uk-width-medium-1-2">					</div>
 					</div>
 
 					<hr>
 
-					<p><a href="http://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="http://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a href="sheet.php?p=credits">these fine folks</a></p>
+					<p><a href="https://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="https://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a href="sheet.php?p=credits">these fine folks</a></p>
 				</div>
 			</div>
 		</div>
 
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
 		<script type="text/javascript">
 			$( document ).ready(function() {
 				var container = $('.images');
@@ -104,5 +108,16 @@
 					});
 				});
 			});
-		</script>	</body>
+		</script>
+		<script>
+	    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-41085222-2', 'auto');
+	  ga('send', 'pageview');
+
+	  </script>
+	</body>
 </html>
