--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <canvas id="canvas"></canvas>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav dark">
     <div class="w-container">
-      <nav role="navigation" class="w-nav-menu"><a href="#" class="w-nav-link dark">About</a><a href="presskit/tiltShift/index.html" class="w-nav-link dark">PressKit</a><a href="#" class="w-nav-link dark">Contact</a></nav>
+      <nav role="navigation" class="w-nav-menu"><a href="#" class="w-nav-link dark">About</a><a href="../presskit/tiltShift/index.html" class="w-nav-link dark">PressKit</a><a href="mailto:hello@redhousegames.net" class="w-nav-link dark">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
