relative link to redhouse page

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </a>
       </div>
     </div>
-    <div class="redhouse"><a href="https://redhousegames.net/"><img width="125" src="images/red_house_games.png"></a></div>
+    <div class="redhouse"><a href="../"><img width="125" src="images/red_house_games.png"></a></div>
   </div>
   </div>
   <div class="footer">
