--- a/index.html
+++ b/index.html
@@ -19,13 +19,29 @@
 
 <body class="dark">
   <canvas id="canvas"></canvas>
-  <div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav dark">
+  <!--<div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav dark">
     <div class="w-container">
       <nav role="navigation" class="w-nav-menu"><a href="#" class="w-nav-link dark">About</a><a href="../presskit/tiltShift/index.html" class="w-nav-link dark">PressKit</a><a href="mailto:hello@redhousegames.net?Subject=Question%20about%20TiltShift" class="w-nav-link dark">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
-    </div>
+    </div> -->
+    <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
+          <div class="w-container">
+              <a class="brand-link w-nav-brand" href="/">
+                  <img class="logo" src="images/rhg_logo.png">
+              </a>
+              <nav class="nav-menu w-nav-menu" role="navigation">
+                  <a class="nav-link w-nav-link" href="TiltShift/">Our Game:&nbsp;<strong>TiltShift</strong></a>
+                  <a class="nav-link w-nav-link" href="presskit/index.html"><strong>PressKit</strong></a>
+                  <a class="nav-link w-nav-link" href="mailto:hello@redhousegames.net?Subject=More%20About%20Red%20House%20Games"><strong>Contact</strong></a>
+              </nav>
+              <div class="menu-button w-clearfix w-nav-button">
+                  <div class="menu-text">MENU</div>
+                  <div class="menu-icon w-icon-nav-menu"></div>
+              </div>
+          </div>
+      </div>
   </div>
   <div class="w-container flex">
     <h2 data-ix="tagline" class="tagline">Explore a logic-cube that challenges your puzzle solving ability</h2>
