--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           { "items": [] }
         </script>
       </a><a href="TiltShift_Demo.zip" id="Demo" onClick="ga('send', 'event', { eventCategory: 'Demo', eventAction: 'download'});" download class="w-button submit demo">Download<br> PC Demo</a>
-      <h1 class="lead">TiltShift is a logic-cube game that challenges your puzzle solving ability with a number of quirky blocks.&nbsp;</h1></div>
+      <h1 class="lead">TiltShift is a game that pushes your puzzle solving ability and spatial reasoning to their limits.&nbsp;</h1></div>
     <div class="w-row">
       <div class="w-col w-col-6">
-        <p>Tron-inspired and bright with beautiful lighting, you will utilize a one-of- a-kind rotation mechanic to navigate
+        <p>Utilize a one-of- a-kind rotation mechanic to navigate
           the face of a three dimensional cube. Learn to see the 3D puzzle through multiple perspectives and think from steps
           ahead to raise your skills and solve seemingly impossible puzzles.<br><br>TiltShift is being designed and developed
           by Red House Games, and is intended to be released on PC, Mac, Linux, iOS, and Android in Summer 2016.</p>
