--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   <canvas id="canvas"></canvas>
   <!--<div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav dark">
     <div class="w-container">
-      <nav role="navigation" class="w-nav-menu"><a href="#" class="w-nav-link dark">About</a><a href="../presskit/tiltShift/index.html" class="w-nav-link dark">PressKit</a><a href="mailto:hello@redhousegames.net?Subject=Question%20about%20TiltShift" class="w-nav-link dark">Contact</a></nav>
+      <nav role="navigation" class="w-nav-menu">
+        <div class="redhouse"><a href="../"><img width="125" src="images/red_house_games.png"></a></div>
+        <a href="#" class="w-nav-link dark">About</a>
+        <a href="../presskit/tiltShift/index.html" class="w-nav-link dark">PressKit</a>
+        <a href="mailto:hello@redhousegames.net?Subject=Question%20about%20TiltShift" class="w-nav-link dark">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -200,7 +204,7 @@
   </div>
   </div>
   <div class="footer">
-    <p class="footer-text">Copyright © 2016 Red House Games. Music by <a href="http://www.dreade.com/nosoap/">DST</a>.</p>
+    <p class="footer-text">Copyright © 2020 Red House Games. Music by <a href="http://www.dreade.com/nosoap/">DST</a>.</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
   <script>
