--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
   <canvas id="canvas"></canvas>
   <!--<div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav dark">
     <div class="w-container">
-      <nav role="navigation" class="w-nav-menu">
-        <div class="redhouse"><a href="../"><img width="125" src="images/red_house_games.png"></a></div>
-        <a href="#" class="w-nav-link dark">About</a>
-        <a href="../presskit/tiltShift/index.html" class="w-nav-link dark">PressKit</a>
-        <a href="mailto:hello@redhousegames.net?Subject=Question%20about%20TiltShift" class="w-nav-link dark">Contact</a></nav>
-      <div class="w-nav-button">
-        <div class="w-icon-nav-menu"></div>
-      </div>
+        <nav role="navigation" class="w-nav-menu">
+          <div class="redhouse"><a href="../"><img width="125" src="images/red_house_games.png"></a></div>
+          <a href="#" class="w-nav-link dark">About</a>
+          <a href="../presskit/tiltShift/index.html" class="w-nav-link dark">PressKit</a>
+          <a href="mailto:hello@redhousegames.net?Subject=Question%20about%20TiltShift" class="w-nav-link dark">Contact</a>
+        </nav>
+        <div class="w-nav-button">
+          <div class="w-icon-nav-menu"></div>
+        </div>
     </div> -->
-  <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
+  <div class="w-nav dark" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
       <div class="w-container">
           <a class="brand-link w-nav-brand" href="/">
-              <img class="logo" src="images/rhg_logo.png">
+              <img class="redhouse" src="images/red_house_games.png">
           </a>
           <nav class="nav-menu w-nav-menu" role="navigation">
               <a class="nav-link w-nav-link" href="TiltShift/">Our Game:&nbsp;<strong>TiltShift</strong></a>
